--- a/P03_marchal_muriel/menu_delice_sens.html
+++ b/P03_marchal_muriel/menu_delice_sens.html
@@ -157,7 +157,7 @@
                                 <h3 class="titre">Tiramisu</h3>
                                 <div class="informations">
                                     <div class="supplement">A la noisette</div>
-                                    <div class="desserts_prix">23€</div>
+                                    <div class="prix">23€</div>
                                 </div>   
                             </div> 
                             <i class="fas fa-check-circle"></i>
@@ -165,7 +165,9 @@
                     </div>
                 </section>
 
-                <button class="commander">Commander</button>
+                <button class="commander">
+                    <span>Commander</span>
+                </button>
             </div>
         </main>
 
