--- a/P03_marchal_muriel/menu_francaise.html
+++ b/P03_marchal_muriel/menu_francaise.html
@@ -166,7 +166,9 @@
                     </section>
                 </div>
                 
-                <button class="commander">Commander</button>
+                <button class="commander">
+                    <span>Commander</span>
+                </button>
             </div>
         </main>
   
