--- a/P03_marchal_muriel/menu_palette_gout.html
+++ b/P03_marchal_muriel/menu_palette_gout.html
@@ -165,7 +165,9 @@
                     </div>
                 </section>
 
-                <button class="commander">Commander</button>
+                <button class="commander">
+                    <span>Commander</span>
+                </button>
             </div>
         </main>
 
