--- a/P03_marchal_muriel/menu_note_enchantee.html
+++ b/P03_marchal_muriel/menu_note_enchantee.html
@@ -176,7 +176,9 @@
                     </div>
                 </section>
 
-                <button class="commander">Commander</button>
+                <button class="commander">
+                    <span>Commander</span>
+                </button>
             </div>
         </main>
 
