--- a/P03_marchal_muriel/page_accueil.html
+++ b/P03_marchal_muriel/page_accueil.html
@@ -58,34 +58,34 @@
                     </div>
                     <h1>Réservez le menu qui vous convient</h1>
                     <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-                    <a href="#restaurants">
-                        <button class="explorer">
-                            Explorer nos restaurants
-                        </button>
-                    </a>
+                    <button class="explorer">
+                        <span>Explorer nos restaurants</span>
+                    </button>
                 </section>
             
                 <section id="fonctionnement">
                     <h2>Fonctionnement</h2>
-                    <div class="categorie">
-                        <div class="nombre">1</div>
-                        <div class="fonctionnement_description">
-                            <i class="fas fa-mobile-alt"></i>
-                            <div>Choisissez un restaurant</div>
+                    <div class="fonctionnement">
+                        <div class="categorie">
+                            <div class="nombre">1</div>
+                            <div class="fonctionnement_description">
+                                <i class="fas fa-mobile-alt"></i>
+                                <div>Choisissez un restaurant</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="categorie">
-                        <div class="nombre">2</div>
-                        <div class="fonctionnement_description">
-                            <i class="fas fa-list-ul"></i>
-                            <div>Composez votre menu</div>
+                        <div class="categorie">
+                            <div class="nombre">2</div>
+                            <div class="fonctionnement_description">
+                                <i class="fas fa-list-ul"></i>
+                                <div>Composez votre menu</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="categorie">
-                        <div class="nombre">3</div>
-                        <div class="fonctionnement_description">
-                            <i class="fas fa-store"></i>
-                            <div>Dégustez au restaurant</div>
+                        <div class="categorie">
+                            <div class="nombre">3</div>
+                            <div class="fonctionnement_description">
+                                <i class="fas fa-store"></i>
+                                <div>Dégustez au restaurant</div>
+                            </div>
                         </div>
                     </div>
                 </section>
