--- a/P03_marchal_muriel/menu_delice_sens.html
+++ b/P03_marchal_muriel/menu_delice_sens.html
@@ -38,12 +38,12 @@
                 <a href="page_accueil.html"><i class="fas fa-arrow-left"></i></a>
                 <img 
                     src="ohmyfood.png" 
-                    alt="logo_ohmyfood" 
+                    alt="Ohmyfood" 
                     id="logo_header"
                 />
                 <img 
                     src="./images/le_delice_des_sens.jpg" 
-                    alt="le_delice_des_sens" 
+                    alt="le delice des sens" 
                     id="photo_header"
                 />
                 <div class="restaurant_nom">
@@ -165,7 +165,7 @@
                     </div>
                 </section>
 
-                <button class="commander">
+                <button class="btn_commander">
                     <span>Commander</span>
                 </button>
             </div>
@@ -173,7 +173,11 @@
 
         <footer>
             <div class="container">
-                <h4>ohmyfood</h4>
+                <img 
+                    src="ohmyfood.png" 
+                    alt="Ohmyfood" 
+                    class="ohmyfood_footer"
+                />
                 <div class="footer"><i class="fas fa-utensils footer"></i>
                     Proposer un restaurant</div>
                 <div class="footer"><i class="fas fa-hands-helping footer"></i>
