--- a/P03_marchal_muriel/menu_francaise.html
+++ b/P03_marchal_muriel/menu_francaise.html
@@ -39,12 +39,12 @@
                 <a href="page_accueil.html"><i class="fas fa-arrow-left"></i></a>
                 <img 
                     src="ohmyfood.png" 
-                    alt="logo_ohmyfood" 
+                    alt="Ohmyfood" 
                     id="logo_header"
                 />
                 <img 
                     src="./images/a_la_francaise.jpg" 
-                    alt="a_la_francaise" 
+                    alt="à la francaise" 
                     id="photo_header"
                 />
                 <div class="restaurant_nom">
@@ -166,7 +166,7 @@
                     </section>
                 </div>
                 
-                <button class="commander">
+                <button class="btn_commander">
                     <span>Commander</span>
                 </button>
             </div>
@@ -174,7 +174,11 @@
   
         <footer>
             <div class="container">
-                <h4>ohmyfood</h4>
+                <img 
+                    src="ohmyfood.png" 
+                    alt="Ohmyfood" 
+                    class="ohmyfood_footer"
+                />
                 <div class="footer_liste"><i class="fas fa-utensils footer"></i>
                     Proposer un restaurant</div>
                 <div class="footer_liste"><i class="fas fa-hands-helping footer"></i>
