modifications des padding, margin, ainmations bouton explorer et commander et alléger le code html des coeurs

--- a/menu_delice_sens.html
+++ b/menu_delice_sens.html
@@ -41,8 +41,8 @@
                 <div class="restaurant_nom">
                     <h1>Le délice des sens</h1>
                     <div class="favori">
-                        <i class="far fa-heart empty"></i>
-                        <i class="fas fa-heart full"></i>
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
                     </div>
                 </div>
             </div>
@@ -200,3 +200,4 @@
             </div>
         </footer>
     </body>
+</html>
