--- a/menu_palette_gout.html
+++ b/menu_palette_gout.html
@@ -41,8 +41,8 @@
                 <div class="restaurant_nom">
                     <h1>La palette du goût</h1>
                     <div class="favori">
-                        <i class="far fa-heart empty"></i>
-                        <i class="fas fa-heart full"></i>
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
                     </div>
                 </div>
             </div>    
@@ -57,7 +57,7 @@
                             <div class="menu">
                                 <h3 class="titre">Fricassée d'escargot</h3>
                                 <div class="informations">
-                                    <div class="supplement">Au piment d'Espelette</div>
+                                    <div class="supplement">Au piment d'espelette</div>
                                     <div class="prix">25€</div>
                                 </div>  
                             </div> 
@@ -200,3 +200,4 @@
             </div>
        </footer>
     </body>
+</html>
