--- a/menu_francaise.html
+++ b/menu_francaise.html
@@ -42,8 +42,8 @@
                 <div class="restaurant_nom">
                     <h1>À la française</h1>
                     <div class="favori">
-                        <i class="far fa-heart empty"></i>
-                        <i class="fas fa-heart full"></i>
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
                     </div>
                 </div>
             </div>   
@@ -201,3 +201,4 @@
             </div>
         </footer>
     </body>
+</html>
