--- a/page_accueil.html
+++ b/page_accueil.html
@@ -103,8 +103,8 @@
                                         <div class="lieu">Ménilmontant</div>
                                     </div>
                                     <div class="favori">
-                                        <i class="far fa-heart empty"></i>
-                                        <i class="fas fa-heart full"></i>
+                                        <i class="far fa-heart"></i>
+                                        <i class="fas fa-heart"></i>
                                     </div>
                                 </div>
                             </a>
@@ -124,8 +124,8 @@
                                         <div class="lieu">Charonne</div>
                                     </div>
                                     <div class="favori">
-                                        <i class="far fa-heart empty"></i>
-                                        <i class="fas fa-heart full"></i>
+                                        <i class="far fa-heart"></i>
+                                        <i class="fas fa-heart"></i>
                                     </div>
                                 </div>
                             </a>
@@ -144,8 +144,8 @@
                                         <div class="lieu">Cité Rouge</div>
                                     </div>
                                     <div class="favori">
-                                        <i class="far fa-heart empty"></i>
-                                        <i class="fas fa-heart full"></i>
+                                        <i class="far fa-heart"></i>
+                                        <i class="fas fa-heart"></i>
                                     </div>
                                 </div>
                             </a>
@@ -164,8 +164,8 @@
                                         <div class="lieu"> Folie-Méricourt</div>
                                     </div>
                                     <div class="favori">
-                                        <i class="far fa-heart empty"></i>
-                                        <i class="fas fa-heart full"></i>
+                                        <i class="far fa-heart"></i>
+                                        <i class="fas fa-heart"></i>
                                     </div>
                                 </div>
                             </a>
@@ -193,3 +193,4 @@
             </div>
        </footer>
     </body>
+</html>
