modification footer et animations sur les menus

--- a/menu_note_enchantee.html
+++ b/menu_note_enchantee.html
@@ -204,9 +204,9 @@
                     alt="Ohmyfood" 
                     class="ohmyfood_footer"
                 />
-                <div class="footer"><i class="fas fa-utensils footer"></i>
+                <div class="footer_liste"><i class="fas fa-utensils footer"></i>
                     Proposer un restaurant</div>
-                <div class="footer"><i class="fas fa-hands-helping footer"></i>
+                <div class="footer_liste"><i class="fas fa-hands-helping footer"></i>
                     Devenir partenaire</div>
                 <div>Mentions légales</div>
                 <div><a href="mailto:contact@ohmyfood.com">Contact</a></div>
