--- a/menu_note_enchantee.html
+++ b/menu_note_enchantee.html
@@ -27,7 +27,7 @@
     <body>
         <header>
             <div class="container">
-                <a href="page_accueil.html"><i class="fas fa-arrow-left"></i></a>
+                <a href="index.html"><i class="fas fa-arrow-left"></i></a>
                 <img 
                     src="ohmyfood.png" 
                     alt="Ohmyfood" 
