--- a/menu_francaise.html
+++ b/menu_francaise.html
@@ -2,6 +2,8 @@
 <html lang="fr">
 	<head>
 		<meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 		<link 
             rel="preconnect" 
             href="https://fonts.googleapis.com"
